# shipmate

./: .gitignore  CLAUDE.md  CONTRACT.md  LEDGER.md  README.md  VERSIONS  pyproject.toml
.github/: dependabot.yml
.github/workflows/: apply-all.yml  apply-env-level.yml  apply.yml  ci.yml  deploy.yml
actions/apply-all-detect/: action.yml
actions/apply-cell/: action.yml
actions/apply-detect/: action.yml
actions/build-matrix/: action.yml
actions/checkmate-refresh/: action.yml
actions/comment-ops/: action.yml
actions/deploy-detect/: action.yml
actions/dispatch/: action.yml
actions/drift-cell/: action.yml
actions/plan-cell/: action.yml
actions/state/: README.md  action.yml
actions/summary/: action.yml
docs/: branch-protection.md
docs/superpowers/specs/: 2026-07-15-prd2-deploy-waves-drift-design.md
scripts/: apply-all-detect  apply-detect  authorize  build-matrix  comment-parse  deploy-detect  env-order  plan-classify  summary-comment  waves
scripts/tests/: test_apply_all_detect.py  test_apply_detect.py  test_build_matrix.py  test_check_runs_filter_aligned.py  test_comment_parse.py  test_deploy_detect.py  test_env_order.py  test_gh_json_single_source.py  test_internal_pins.py  test_plan_classify.py  test_summary_comment.py  test_waves.py
scripts/tests/fixtures/: run-graph-stacks.dot
